terraform/env/jenkins/sg.tf
# ---------------------------------------------------------
# For Jenkings EC2 Instance
# ---------------------------------------------------------

resource "aws_security_group" "jenkings_sg" {
  name        = "${var.name}-sg-${var.environment}"
  description = "Security group for jenkings ec2"
  vpc_id      = aws_vpc.jenkins_vpc.id
  # HTTP
  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Jenkins
  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS
  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound
  egress {
    description = "Allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name}-sg-${var.environment}"
  }
}
